# NTWI_Project_LostDataEstimator

./: .gitignore  CMakeLists.txt  README.md  ntwi.cpp
dane/: readme.md
dane/duze/: duze-1.attr  duze-1.data  duze-2.data  duze-4.attr  duze-4.data  duze-8.data  duze0.data  duze2.data  duze5.data  duze6.attr  duze7.data  duze9.attr
dane/duze/1/: duze-0.attr  duze-0.data  duze-2.attr  duze-3.attr  duze-3.data  duze-5.data  duze-6.data  duze-7.data  duze-9.data
dane/duze/2/: duze1.data  duze3.data  duze4.data  duze5.attr  duze6.data  duze7.attr  duze8.attr  duze8.data  duze9.data
dane/male/: male-5.data  male-7.data  male-8.data
dane/male/2/: male5.data  male9.data
sprawozdanie/: .gitignore  Makefile  sprawozdanie.md  wynik-duze.txt
src/: dataset.hpp  fcm.hpp  knn.hpp  knnImp.hpp  ntwi.cpp  utils.hpp
temat/: NTWI-projekt-obliczenia-ziarniste-grupowanie-danych-niejednorodnych.tex
